--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "0.1.1",
+    "bootstrap": "^4.6.0",
+    "graphql": "0.13.0",
+    "graphql-tag": "^2.11.0",
     "node-sass": "^5.0.0",
     "react": "^16.2.0",
+    "react-apollo": "2.0.4",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "1.0.17",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
