--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "nodemon": "^1.14.6"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
     "concurrently": "^3.5.1",
     "cors": "^2.8.5",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "graphql": "0.12.3",
+    "graphql-tag": "^2.11.0",
+    "react-apollo": "^3.1.5"
   }
 }
