--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "apollo-boost": "0.1.1",
     "bootstrap": "^4.6.0",
     "graphql": "0.13.0",
@@ -12,6 +13,7 @@
     "react": "^16.2.0",
     "react-apollo": "2.0.4",
     "react-bootstrap": "^1.4.3",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.0.17",
