--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "apollo-boost": "^0.4.9",
     "concurrently": "^3.5.1",
     "cors": "^2.8.5",
